# baseball_X

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  sample.json
.github/workflows/: analytics.yml  generator.yml  publisher.yml
docs/: runbook.md
jobs/: run_analytics.py  run_generator.py  run_player_spotlight.py  run_publisher.py
src/baseball_x/: config.py
src/baseball_x/analytics/: collector.py
src/baseball_x/data/: __init__.py  npbscholar.py
src/baseball_x/generator/: llm_client.py  prompts.py
src/baseball_x/metrics/: sabermetrics.py  selector.py
src/baseball_x/notion/: client.py  schema.py
src/baseball_x/publisher/: x_client.py
src/baseball_x/visualization/: charts.py
tests/: test_npbscholar.py
