[project]
name = "baseball-x"
version = "0.1.0"
description = "NPB野球データ自動投稿X運用基盤"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "anthropic>=0.30.0",
    "notion-client>=2.2.1",
    "tweepy>=4.14.0",
    "matplotlib>=3.9.0",
    "japanize-matplotlib>=1.1.3",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_x"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
